конец на 2 декабря

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -93,12 +93,16 @@ header.header
             a(href="tel:84959568626").header__tel +7 495 956 86 26
 .header__menu
     ul.header__main-header-menu
-        li.header__main-header-menu-item#for-person-tablet
-            a(href="#!")#for-person-tablet-link Частным клиентам
-        li.header__main-header-menu-item
-            a(href="#!") Корпоративным клиентам
-        li.header__main-header-menu-item
-            a(href="#!") Услуги на ранке ценных бумаг
+        .header__main-header-menu-items
+            li.header__main-header-menu-item#for-person-tablet
+                a(href="#!")#for-person-tablet-link Частным клиентам
+            li.header__main-header-menu-item
+                a(href="#!") Корпоративным клиентам
+            li.header__main-header-menu-item
+                a(href="#!") Услуги на ранке ценных бумаг
+        .header__desktop-search
+            li
+                a(href="#!").icon-Search
     .header__for-person-block
         .header__inline
             ul.header__for-person-list
