--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -12,7 +12,236 @@
     align-items: center;
     justify-content: center;
 }
+//1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920
+@media screen and (max-width: 4100px) {
+    .header__mobile-menu {
+        display: none;
+    }
 
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 75px;
+        background-color: $white;
+
+        .header__logo {
+            margin-left: 375px;
+        }
+
+        .header__left-text {
+            display: flex;
+            align-items: center;
+
+            a {
+                display: inline-block;
+                font-family: G-regular;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+                padding-right: 20px;
+                text-transform: uppercase;
+                color: $gray-darken-5;
+            }
+
+            .header__banking_desktop {
+                padding-left: 50px;
+                padding-top: 25px;
+            }
+
+            .header__about-bank_desktop {
+                padding-left: 30px;
+                padding-top: 25px;
+            }
+        }
+
+        .header__right-icons {
+            margin-right: 375px;
+            padding-top: 25px;
+
+            .header__tel-desktop {
+                display: inline;
+                color: $orange;
+                font-family: G-medium;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+            }
+
+            .office {
+                padding-right: 35px;
+                display: inline-block;
+                font-family: G-regular;
+                color: $gray-darken-5 !important;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+                text-transform: uppercase;
+
+                a {
+                    color: $gray-darken-5
+                }
+            }
+
+            .lang {
+                display: inline-block;
+                font-family: G-regular;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+                padding-right: 35px;
+                text-transform: uppercase;
+
+                a {
+                    color: $gray-darken-5
+                }
+            }
+
+            .icon-Look {
+                display: none;
+            }
+
+            .icon-Search {
+                display: none;
+            }
+
+            .icon-menu {
+                display: none;
+            }
+        }
+    }
+
+    .header__menu {
+        display: block;
+
+        .header__for-person-block_show {
+            display: block;
+        }
+
+        .header__inline {
+            display: flex;
+
+        }
+
+        ul.header__main-header-menu {
+            border-top: 1px solid $gray-darken-2;
+            border-bottom: 1px solid $gray-darken-2;
+            list-style: none;
+            background: $white;
+            display: flex;
+            justify-content: space-between;
+            font-family: G-medium;
+            font-size: 14px;
+
+            a {
+                color: $black
+            }
+
+            li:first-child {
+                margin-left: 375px;
+            }
+
+            li.header__main-header-menu-item {
+                margin-right: 50px;
+                margin-top: 23px;
+                margin-bottom: 23px;
+            }
+        }
+
+        .header__main-header-menu-items {
+            display: flex;
+        }
+
+        .header__desktop-search {
+            padding-right: 375px;
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    ul.header__for-person-list {
+        padding-left: 375px;
+        display: inline-block;
+        column-gap: 17px;
+        margin-top: 26px;
+        list-style: none;
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+        padding-right: 70px;
+
+        li.header__for-person-list-item {
+            padding-top: 10px;
+            padding-bottom: 10px;
+            line-height: 1.5rem;
+
+            a {
+                color: $gray-darken-5;
+                font-size: 18px;
+                font-family: G-regular;
+            }
+
+            a:hover {
+                color: $deep-blue;
+                transition: 0.5s
+            }
+        }
+    }
+
+    .header__for-person-block {
+        display: none;
+        background: $white;
+
+        .header__signIn-container {
+            display: block;
+            margin-bottom: 35px;
+            margin-left: 35px;
+
+            .header__top-img {
+                height: 140px;
+                width: 279px;
+                background-color: #CEDEEC;
+                margin-top: 55px;
+                margin-right: 30px;
+
+                img {
+                    margin-top: -40px;
+                    margin-left: 5px;
+                    min-height: 180px;
+                }
+            }
+
+            .header__signIn {
+                margin-top: 15px;
+                font-family: G-medium;
+                font-size: 14px;
+                max-width: 279px;
+
+                .header__signIn-text {
+                    line-height: 25px;
+                    margin-bottom: 15px;
+                }
+            }
+        }
+
+        .header__about-bank-container {
+            margin-top: 30px;
+            display: none;
+
+
+        }
+
+        .header__contacts {
+            margin-top: 1px;
+            min-height: 1px;
+
+            .private {
+                display: none;
+            }
+
+            .tel {
+                display: none
+            }
+        }
+    }
+}
 //1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_
 @media screen and (max-width: 1920px) {
     .header__mobile-menu {
@@ -96,6 +325,7 @@
             }
 
             .icon-Look {
+                display: inline-block;
                 padding-right: 30px;
             }
 
@@ -158,18 +388,20 @@
     ul.header__for-person-list {
         padding-left: 65px;
         display: inline-block;
-        column-gap: 70px;
-        margin-top: 26px;
+        column-gap: 20px;
+        margin-top: 30px;
         list-style: none;
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
-        margin-right: 66px;
-        
+        padding-right: 0px;
+        margin-right: 0px;
+        padding-top: 0px;
         li.header__for-person-list-item {
-            padding-top: 18px;
             display: flex;
-
+            line-height: 30px;
+            padding-top: 10px;
+            padding-bottom: 0px;
             a {
                 color: $gray-darken-5;
                 font-size: 18px;
@@ -191,7 +423,6 @@
             display: block;
             margin-bottom: 35px;
             margin-right: 35px;
-
             .header__top-img {
                 height: 140px;
                 width: 279px;
@@ -368,6 +599,7 @@
             }
 
             .icon-Look {
+                display: inline-block;
                 padding-right: 20px;
             }
 
@@ -426,21 +658,20 @@
     ul.header__for-person-list {
         list-style: none;
         background: $white;
-        justify-content: center;
         font-family: G-regular;
         font-size: 18px;
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
         column-gap: 0px;
-        margin-right: 90px;
-        margin-top: 0px;
-
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 90px;
+        padding-right: 90px;
         li.header__for-person-list-item {
-            padding-top: 22px;
-            padding-left: 25px;
             display: block;
-
+            padding-top: 8px;
             a {
                 color: $gray-darken-5;
             }
@@ -464,7 +695,7 @@
                 height: 140px;
                 width: 279px;
                 background-color: #CEDEEC;
-                margin-top: 90px;
+                margin-top: 75px;
                 margin-left: 50px;
 
                 img {
@@ -475,7 +706,7 @@
             }
 
             .header__signIn {
-                margin-top: 95px;
+                margin-top: 80px;
                 font-family: G-medium;
                 font-size: 18px;
                 margin-right: 18px;
@@ -573,13 +804,14 @@
             font-family: G-medium;
 
             .private {
-
+                display: inline-block;
                 a {
                     color: $black;
                 }
             }
 
             .tel {
+                display: inline-block;
                 a {
                     color: $orange;
                 }
