добавил дропдаун о банке рядом с лого, убрал последний медиа-запрос, делаю по mobile last

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -4,7 +4,7 @@ header.header
         .header__banking_desktop 
             a(href="#!") Private banking
         .header__about-bank_desktop 
-            a(href="#!") О банке
+            a(href="#!")#header__about-bank-button_desktop О банке
     .header__right-icons
         .office
             a(href="#!") Офисы и банкоматы
@@ -15,6 +15,22 @@ header.header
         span.icon-Search
         span.icon-menu#icon-menu
         a(href="tel:84959568626").header__tel-desktop +7 495 956 86 26
+.header__about-bank-block_desktop
+    ul
+        li
+            a(href="#!") Для юридических лиц
+        li
+            a(href="#!") Резервный канал
+        li
+            a(href="#!") Для частных клиентов
+        li
+            a(href="#!") Личный кабинет инвестора
+        li
+            a(href="#!") Перевод с карты на карту
+        li
+            a(href="#!") Samsung Pay
+    .header__about-bank-block-close_desktop
+        a.icon-Close#header__about-bank-button-close_desktop
 .header__mobile-menu
     ul.header__menu
         li.header__main-item#for-person
