Все дропдауны на 360px работают

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -94,13 +94,64 @@ header.header
             .header__img-text-corp Интернет-банк для юридических лиц
             .header__request-container
                 a(href="#!").btn Подать заявку
-        
-        
-        
-        li.header__main-item
-            a(href="#!").header__main-item-dropdown  Услуги на рынке ценных бумаг
-        li.header__main-item
-            a(href="#!").header__main-item-dropdown  О банке
+        li.header__main-item#for-services
+            a(href="#!").header__main-item-dropdown#for-services-dropdown  Услуги на рынке ценных бумаг
+        li.header__for-services-list-item 
+            a(href="#!") Брокерское обслуживание
+        li.header__for-services-list-item  
+            a(href="#!") Документы
+        li.header__for-services-list-item  
+            a(href="#!") Прямой доступ на валютный рынок
+        li.header__for-services-list-item  
+            a(href="#!") Облигации
+        li.header__for-services-list-item  
+            a(href="#!") Еврооблигации
+        li.header__for-services-list-item  
+            a(href="#!") Тарифы
+        li.header__for-services-list-item  
+            a(href="#!") Интернет-трейдинг QUIK
+        li.header__for-services-list-item  
+            a(href="#!") Интернет-трейдинг TRANSAQ
+        li.header__for-services-list-item  
+            a(href="#!") Войти в личный кабинет
+        li.header__for-services-list-item  
+            a(href="#!") Депозитарные условия
+        li.header__for-services-list-item  
+            a(href="#!") Открыть счет
+        li.header__for-services-list-item  
+            a(href="#!") Рынки
+        li.header__for-services-list-item  
+            a(href="#!") Непокрытые сделки 
+        li.header__for-services-list-item  
+            a(href="#!") Контакты
+        li.header__for-services-list-item 
+            .header__top-img-services
+                 img(src="media/top6.png")
+            .header__request-container
+                a(href="#!").btn Войти в личный кабинет
+                
+                
+                
+                
+        li.header__main-item#for-about-bank-mobile
+            a(href="#!").header__main-item-dropdown#for-about-bank-mobile-dropdown  О банке
+        li.header__for-about-bank-mobile-list-item 
+            a(href="#!") Для юридических лиц
+        li.header__for-about-bank-mobile-list-item  
+            a(href="#!") Резервный канал
+        li.header__for-about-bank-mobile-list-item  
+            a(href="#!") Для частных клиентов
+        li.header__for-about-bank-mobile-list-item  
+            a(href="#!") Личный кабинет инвестора
+        li.header__for-about-bank-mobile-list-item  
+            a(href="#!") Перевод с карты на карту
+        li.header__for-about-bank-mobile-list-item.last-item 
+            a(href="#!") Samsung Pay
+            
+            
+            
+            
+
         li.header__main-item 
             a(href="#!") Private banking
         li.header__main-item 
