--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -14,266 +14,272 @@
 }
 
 //1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920_1920<=
-    .header__mobile-menu {
-        display: none;
+.header__mobile-menu {
+    display: none;
+}
+
+.header__about-bank-block_desktop {
+    z-index: 10;
+    transform: translateY(-1000px);
+    transition: 0.5s;
+    position: absolute;
+    background: $white;
+    margin-top: 1px;
+    width: 100%;
+    box-shadow: 0px 34px 48px -14px $gray-darken-2;
+
+    .header__about-bank-block-close_desktop {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
     }
-    .header__about-bank-block_desktop {
-        z-index: 10;
-        transform: translateY(-1000px);
-        transition: 0.5s;
-        position: absolute;
-        background: $white;
-        margin-top: 1px;
-        width: 100%;
-        box-shadow: 0px 34px 48px -14px $gray-darken-2;
-        .header__about-bank-block-close_desktop{
-                display: flex;
-                justify-content: center;
-            margin-bottom: 20px;
-            }
-        ul {
-            list-style: none;
-            column-count: 3;
-            column-gap: 0px;
-            margin-left: 375px;
-            margin-right: 375px;
-            padding-top: 33px;
-            padding-bottom: 20px;
-            font-size: 18px;
-            line-height: 50px;
-            font-family: G-regular;
-            a{
-                color: $gray-darken-5;
-            }
+
+    ul {
+        list-style: none;
+        column-count: 3;
+        column-gap: 0px;
+        margin-left: 375px;
+        margin-right: 375px;
+        padding-top: 33px;
+        padding-bottom: 20px;
+        font-size: 18px;
+        line-height: 50px;
+        font-family: G-regular;
+
+        a {
+            color: $gray-darken-5;
         }
     }
-    .header__about-bank-block_display{
-        transform: translateY(0);
-        transition: 0.5s;
+}
+
+.header__about-bank-block_display {
+    transform: translateY(0);
+    transition: 0.5s;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 75px;
+    background-color: $white;
+
+    .header__logo {
+        margin-left: 375px;
     }
-    .header {
+
+    .header__left-text {
+        display: flex;
+        align-items: center;
+
+        a {
+            display: inline-block;
+            font-family: G-regular;
+            font-size: 12px;
+            letter-spacing: 0.05em;
+            padding-right: 20px;
+            text-transform: uppercase;
+            color: $gray-darken-5;
+        }
+
+        .header__banking_desktop {
+            padding-left: 50px;
+            padding-top: 25px;
+        }
+
+        .header__about-bank_desktop {
+            padding-left: 30px;
+            padding-top: 25px;
+        }
+    }
+
+    .header__right-icons {
+        margin-right: 375px;
+        padding-top: 25px;
+
+        .header__tel-desktop {
+            display: inline;
+            color: $orange;
+            font-family: G-medium;
+            font-size: 12px;
+            letter-spacing: 0.05em;
+        }
+
+        .office {
+            padding-right: 35px;
+            display: inline-block;
+            font-family: G-regular;
+            color: $gray-darken-5 !important;
+            font-size: 12px;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+
+            a {
+                color: $gray-darken-5
+            }
+        }
+
+        .lang {
+            display: inline-block;
+            font-family: G-regular;
+            font-size: 12px;
+            letter-spacing: 0.05em;
+            padding-right: 35px;
+            text-transform: uppercase;
+
+            a {
+                color: $gray-darken-5
+            }
+        }
+
+        .icon-Look {
+            display: none;
+        }
+
+        .icon-Search {
+            display: none;
+        }
+
+        .icon-menu {
+            display: none;
+        }
+    }
+}
+
+.header__menu {
+    display: block;
+
+    .header__for-person-block_show {
+        display: block;
+    }
+
+    .header__inline {
+        display: flex;
+
+    }
+
+    ul.header__main-header-menu {
+        border-top: 1px solid $gray-darken-2;
+        border-bottom: 1px solid $gray-darken-2;
+        list-style: none;
+        background: $white;
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        height: 75px;
-        background-color: $white;
+        font-family: G-medium;
+        font-size: 14px;
 
-        .header__logo {
+        a {
+            color: $black
+        }
+
+        li:first-child {
             margin-left: 375px;
         }
 
-        .header__left-text {
-            display: flex;
-            align-items: center;
-
-            a {
-                display: inline-block;
-                font-family: G-regular;
-                font-size: 12px;
-                letter-spacing: 0.05em;
-                padding-right: 20px;
-                text-transform: uppercase;
-                color: $gray-darken-5;
-            }
-
-            .header__banking_desktop {
-                padding-left: 50px;
-                padding-top: 25px;
-            }
-
-            .header__about-bank_desktop {
-                padding-left: 30px;
-                padding-top: 25px;
-            }
-        }
-
-        .header__right-icons {
-            margin-right: 375px;
-            padding-top: 25px;
-
-            .header__tel-desktop {
-                display: inline;
-                color: $orange;
-                font-family: G-medium;
-                font-size: 12px;
-                letter-spacing: 0.05em;
-            }
-
-            .office {
-                padding-right: 35px;
-                display: inline-block;
-                font-family: G-regular;
-                color: $gray-darken-5 !important;
-                font-size: 12px;
-                letter-spacing: 0.05em;
-                text-transform: uppercase;
-
-                a {
-                    color: $gray-darken-5
-                }
-            }
-
-            .lang {
-                display: inline-block;
-                font-family: G-regular;
-                font-size: 12px;
-                letter-spacing: 0.05em;
-                padding-right: 35px;
-                text-transform: uppercase;
-
-                a {
-                    color: $gray-darken-5
-                }
-            }
-
-            .icon-Look {
-                display: none;
-            }
-
-            .icon-Search {
-                display: none;
-            }
-
-            .icon-menu {
-                display: none;
-            }
+        li.header__main-header-menu-item {
+            margin-right: 50px;
+            margin-top: 23px;
+            margin-bottom: 23px;
         }
     }
 
-    .header__menu {
+    .header__main-header-menu-items {
+        display: flex;
+    }
+
+    .header__desktop-search {
+        padding-right: 375px;
+        display: flex;
+        align-items: center;
+    }
+}
+
+ul.header__for-person-list {
+    padding-left: 375px;
+    display: inline-block;
+    column-gap: 17px;
+    margin-top: 26px;
+    list-style: none;
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    padding-right: 70px;
+
+    li.header__for-person-list-item {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        line-height: 1.5rem;
+
+        a {
+            color: $gray-darken-5;
+            font-size: 18px;
+            font-family: G-regular;
+        }
+
+        a:hover {
+            color: $deep-blue;
+            transition: 0.5s
+        }
+    }
+}
+
+.header__for-person-block {
+    display: none;
+    background: $white;
+
+    .header__signIn-container {
         display: block;
+        margin-bottom: 35px;
+        margin-left: 35px;
 
-        .header__for-person-block_show {
-            display: block;
+        .header__top-img {
+            height: 140px;
+            width: 279px;
+            background-color: #CEDEEC;
+            margin-top: 55px;
+            margin-right: 30px;
+
+            img {
+                margin-top: -40px;
+                margin-left: 5px;
+                min-height: 180px;
+            }
         }
 
-        .header__inline {
-            display: flex;
-
-        }
-
-        ul.header__main-header-menu {
-            border-top: 1px solid $gray-darken-2;
-            border-bottom: 1px solid $gray-darken-2;
-            list-style: none;
-            background: $white;
-            display: flex;
-            justify-content: space-between;
+        .header__signIn {
+            margin-top: 15px;
             font-family: G-medium;
             font-size: 14px;
+            max-width: 279px;
 
-            a {
-                color: $black
-            }
-
-            li:first-child {
-                margin-left: 375px;
-            }
-
-            li.header__main-header-menu-item {
-                margin-right: 50px;
-                margin-top: 23px;
-                margin-bottom: 23px;
-            }
-        }
-
-        .header__main-header-menu-items {
-            display: flex;
-        }
-
-        .header__desktop-search {
-            padding-right: 375px;
-            display: flex;
-            align-items: center;
-        }
-    }
-
-    ul.header__for-person-list {
-        padding-left: 375px;
-        display: inline-block;
-        column-gap: 17px;
-        margin-top: 26px;
-        list-style: none;
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-        column-count: 2;
-        padding-right: 70px;
-
-        li.header__for-person-list-item {
-            padding-top: 10px;
-            padding-bottom: 10px;
-            line-height: 1.5rem;
-
-            a {
-                color: $gray-darken-5;
-                font-size: 18px;
-                font-family: G-regular;
-            }
-
-            a:hover {
-                color: $deep-blue;
-                transition: 0.5s
+            .header__signIn-text {
+                line-height: 25px;
+                margin-bottom: 15px;
             }
         }
     }
 
-    .header__for-person-block {
+    .header__about-bank-container {
+        margin-top: 30px;
         display: none;
-        background: $white;
 
-        .header__signIn-container {
-            display: block;
-            margin-bottom: 35px;
-            margin-left: 35px;
 
-            .header__top-img {
-                height: 140px;
-                width: 279px;
-                background-color: #CEDEEC;
-                margin-top: 55px;
-                margin-right: 30px;
+    }
 
-                img {
-                    margin-top: -40px;
-                    margin-left: 5px;
-                    min-height: 180px;
-                }
-            }
+    .header__contacts {
+        margin-top: 1px;
+        min-height: 1px;
 
-            .header__signIn {
-                margin-top: 15px;
-                font-family: G-medium;
-                font-size: 14px;
-                max-width: 279px;
-
-                .header__signIn-text {
-                    line-height: 25px;
-                    margin-bottom: 15px;
-                }
-            }
-        }
-
-        .header__about-bank-container {
-            margin-top: 30px;
+        .private {
             display: none;
-
-
         }
 
-        .header__contacts {
-            margin-top: 1px;
-            min-height: 1px;
-
-            .private {
-                display: none;
-            }
-
-            .tel {
-                display: none
-            }
+        .tel {
+            display: none
         }
     }
+}
 
 
 //1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_
@@ -281,6 +287,7 @@
     .header__mobile-menu {
         display: none;
     }
+
     .header__about-bank-block_desktop {
         transform: translateY(-1000px);
         transition: 0.5s;
@@ -289,12 +296,14 @@
         background: $white;
         margin-top: 1px;
         width: 100%;
-        box-shadow: 0px 34px 48px -14px $gray-darken-2; 
-        .header__about-bank-block-close_desktop{
-                display: flex;
-                justify-content: center;
+        box-shadow: 0px 34px 48px -14px $gray-darken-2;
+
+        .header__about-bank-block-close_desktop {
+            display: flex;
+            justify-content: center;
             margin-bottom: 20px;
-            }
+        }
+
         ul {
             list-style: none;
             column-count: 3;
@@ -306,15 +315,18 @@
             font-size: 18px;
             line-height: 50px;
             font-family: G-regular;
-            a{
+
+            a {
                 color: $gray-darken-5;
             }
         }
     }
-    .header__about-bank-block_display{
+
+    .header__about-bank-block_display {
         transform: translateY(0);
         transition: 0.5s;
     }
+
     .header {
         display: flex;
         justify-content: space-between;
@@ -614,9 +626,11 @@
     .header__mobile-menu {
         display: none;
     }
-    .header__about-bank-block_desktop{
+
+    .header__about-bank-block_desktop {
         display: none;
     }
+
     .header__banking_desktop {
         display: none;
     }
@@ -917,9 +931,11 @@
     div.header__menu {
         display: none;
     }
-    .header__about-bank-block_desktop{
+
+    .header__about-bank-block_desktop {
         display: none;
     }
+
     .header__mobile-menu {
         display: block;
     }
@@ -1114,6 +1130,63 @@
             }
         }
 
+        .header__for-services-list-item {
+            display: none;
+            padding-left: 20px;
+            padding-top: 20px;
+            background-color: $white;
+            font-family: G-regular;
+            font-size: 14px;
+            color: $gray-darken-5;
+
+            a {
+                font-family: G-regular;
+                font-size: 14px;
+                color: $gray-darken-5;
+                text-decoration: none;
+            }
+
+            .header__top-img-services {
+                margin-top: 10px;
+                height: 150px;
+                width: 279px;
+                background-color: #e6e4cf;
+                margin-bottom: 10px;
+
+                img {
+                    margin-top: -30px;
+                    margin-left: 50px;
+                    height: 180px;
+                }
+            }
+
+            .header__request-container {
+                margin-right: 20px;
+                padding-bottom: 30px;
+            }
+        }
+
+        .header__for-about-bank-mobile-list-item {
+            display: none;
+            padding-left: 20px;
+            padding-top: 20px;
+            background-color: $white;
+            font-family: G-regular;
+            font-size: 14px;
+            color: $gray-darken-5;
+
+            a {
+                font-family: G-regular;
+                font-size: 14px;
+                color: $gray-darken-5;
+                text-decoration: none;
+            }
+        }
+
+        .last-item {
+            padding-bottom: 20px;
+        }
+
         .header__for-person-list-item_show {
             display: block;
         }
@@ -1141,6 +1214,36 @@
             transform: rotate(180deg);
             transition: 0.5s;
         }
+
+        .header__for-services-list-item_show {
+            display: block;
+        }
+
+        .header__for-services_active {
+            color: $deep-blue !important;
+        }
+
+        .header__for-services_active::after {
+            color: $deep-blue !important;
+            transform: rotate(180deg);
+            transition: 0.5s;
+        }
+
+        .header__for-about-bank-mobile-list-item_show {
+            display: block;
+        }
+
+        .header__for-about-bank-mobile_active {
+            color: $orange !important;
+        }
+
+        .header__for-about-bank-mobile_active::after {
+            color: $orange !important;
+            transform: rotate(180deg);
+            transition: 0.5s;
+        }
+
+
 
     }
 
