--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -163,8 +163,8 @@ header.header
         .header__main-header-menu-items
             li.header__main-header-menu-item#for-person-tablet
                 a(href="#!")#for-person-tablet-link Частным клиентам
-            li.header__main-header-menu-item
-                a(href="#!") Корпоративным клиентам
+            li.header__main-header-menu-item#for-corp-tablet
+                a(href="#!")#for-corp-tablet-link Корпоративным клиентам
             li.header__main-header-menu-item
                 a(href="#!") Услуги на ранке ценных бумаг
         .header__desktop-search
@@ -212,6 +212,51 @@ header.header
                         a(href="#!") Перевод с карты на карту
                     li
                         a(href="#!") Samsung Pay
+        .header__contacts
+            .private 
+                a(href="#!") Private banking
+            .tel
+                a(href="tel:84959568626") +7 495 956 86 26
+    
+    
+    
+    
+    .header__for-corp-block
+        .header__inline
+            ul.header__for-person-list
+                li.header__for-person-list-item
+                    a(href="#!") Интернет-банк
+                li.header__for-person-list-item
+                    a(href="#!") Рассчетно-кассовое обслуживание
+                li.header__for-person-list-item
+                    a(href="#!") Как стать клиентом
+                li.header__for-person-list-item
+                    a(href="#!") Кредитные сделки
+                li.header__for-person-list-item
+                    a(href="#!") Тарифы
+                li.header__for-person-list-item
+                    a(href="#!") Валютный контроль
+                li.header__for-person-list-item
+                    a(href="#!") Управление проектного и структурного финансирования
+                li.header__for-person-list-item
+                    a(href="#!") Корпоративное финансирование
+                li.header__for-person-list-item
+                    a(href="#!") Организация операционно-кассового подразделения
+                li.header__for-person-list-item
+                    a(href="#!") Войти в интернет-банк для юридических лиц
+                li.header__for-person-list-item
+                    a(href="#!") Векселя
+                li.header__for-person-list-item
+                    a(href="#!") Торговое финансирование и экспортно-импортные операции
+                li.header__for-person-list-item
+                    a(href="#!") Инкассация
+            .header__signIn-container
+                .header__signInimage
+                    .header__top-img-corp
+                        img(src="media/top5.png" alt="Войти в личный каинет" title="Войти в личный кабинет")
+                .header__signIn-corp
+                    .header__signIn-text Интернет-банк для юридических лиц
+                    a(href="#!").btn Войти в личный кабинет
         .header__contacts
             .private 
                 a(href="#!") Private banking
