понял, как было лучше сделать, но меню уже готово

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -165,8 +165,8 @@ header.header
                 a(href="#!")#for-person-tablet-link Частным клиентам
             li.header__main-header-menu-item#for-corp-tablet
                 a(href="#!")#for-corp-tablet-link Корпоративным клиентам
-            li.header__main-header-menu-item
-                a(href="#!") Услуги на ранке ценных бумаг
+            li.header__main-header-menu-item#for-services-tablet
+                a(href="#!")#for-services-tablet-link Услуги на ранке ценных бумаг
         .header__desktop-search
             li
                 a(href="#!").icon-Search
@@ -262,5 +262,50 @@ header.header
                 a(href="#!") Private banking
             .tel
                 a(href="tel:84959568626") +7 495 956 86 26
+    .header__for-services-block
+        .header__inline
+            ul.header__for-person-list#services-gap
+                li.header__for-person-list-item
+                    a(href="#!") Брокерское обслуживание
+                li.header__for-person-list-item
+                    a(href="#!") Документы
+                li.header__for-person-list-item
+                    a(href="#!") Прямой доступ на валютный рынок
+                li.header__for-person-list-item
+                    a(href="#!") Облигации
+                li.header__for-person-list-item
+                    a(href="#!") Еврооблигации
+                li.header__for-person-list-item
+                    a(href="#!") Тарифы
+                li.header__for-person-list-item
+                    a(href="#!") Интернет-трейдинг QUIK
+                li.header__for-person-list-item
+                    a(href="#!") Интернет-трейдинг TRANSAQ
+                li.header__for-person-list-item
+                    a(href="#!") Войти в личный кабинет
+                li.header__for-person-list-item
+                    a(href="#!") Депозитарные услуги
+                li.header__for-person-list-item
+                    a(href="#!") Открыть счет
+                li.header__for-person-list-item
+                    a(href="#!") Рынки
+                li.header__for-person-list-item
+                    a(href="#!") Непокрытые сделки
+                li.header__for-person-list-item
+                    a(href="#!") Контакты
+            .header__signIn-container
+                .header__signInimage
+                    .header__top-img-services
+                        img(src="media/top6.png" alt="Войти в личный каинет" title="Войти в личный кабинет")
+                .header__signIn-services
+                    a(href="#!").btn Войти в личный кабинет
+        .header__contacts
+            .private 
+                a(href="#!") Private banking
+            .tel
+                a(href="tel:84959568626") +7 495 956 86 26
+                
+                
+    
            
         
