начат второй слайдер, осталось оформить слайды

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,6 +4,7 @@ block vars
 block header
     include blocks/header.pug
     include blocks/slider.pug 
+    include blocks/servicesSlider.pug 
 block content
 block footer
 
