--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -1,4 +1,4 @@
-.owl-carousel {
+.owl-carousel-1 {
     .item {
         background: #CEDEEC;
         width: 100%;
@@ -75,7 +75,7 @@
 
 //1024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024102410241024
 @media screen and (max-width: 1919px) {
-    .owl-carousel {
+    .owl-carousel-1 {
         .item {
             padding-left: 60px;
             padding-top: 121px;
@@ -131,7 +131,7 @@
 
 //768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768768
 @media screen and (max-width: 1023px) {
-    .owl-carousel {
+    .owl-carousel-1 {
         .item {
             padding-left: 88px;
             padding-top: 54px;
@@ -185,7 +185,7 @@
 
 //320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320320
 @media screen and (max-width: 767px) {
-    .owl-carousel {
+    .owl-carousel-1 {
         .item {
             padding-left: 19px;
             padding-top: 36px;
