--- a/pug/blocks/slider.pug
+++ b/pug/blocks/slider.pug
@@ -1,4 +1,4 @@
-.owl-carousel.owl-theme
+.owl-carousel-1.owl-carousel.owl-theme
     .item
         .slider__content
             .slider__title Центр для успешных инвестиций
