закончил второй слайдер, pixel perfect не работает, проверить не могу

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,10 +1,10 @@
-extends blocks/template.pug
+extends template.pug
 block vars
     - var pageTitle="Главная"
 block header
-    include blocks/header.pug
-    include blocks/slider.pug 
-    include blocks/servicesSlider.pug 
+    include ../blocks/header/header.pug
+    include ../blocks/slider/slider.pug 
+    include ../blocks/servicesSlider/servicesSlider.pug 
 block content
 block footer
 
