--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 @import "base/base";
 @import "base/components/button";
 @import "../fonts/icons/style.css";
-@import "blocks/header";
-@import "blocks/slider";
-@import "blocks/servicesSlider";
+@import "../blocks/header/header";
+@import "../blocks/slider/slider";
+@import "../blocks/servicesSlider/servicesSlider"; 
