выделил блок info-block

--- a/blocks/servicesSlider/servicesSlider.pug
+++ b/blocks/servicesSlider/servicesSlider.pug
@@ -2,25 +2,25 @@
     .servicesSlider__slider-container
         h4 Услуги на рынке ценных бумаг
         .owl-carousel.owl-theme.owl-carousel-2
-            .item-2.item-2_slide1
-                .servicesSlider__slide-container
-                    .servicesSlider__slide-content
-                        .servicesSlider__slide-type Брокерское обслуживание
-                        .servicesSlider__slide-title Персональное брокерское обслуживание в банке
-                        .servicesSlider__slide-text Бесплатный ввод и вывод денежных средств (российские рубли в наличной и безналичной форме)
-                img(src="media/servicesSlider1.png").servicesSlider__slide-image
-                .servicesSlider__slide-footer
+            .info-block.info-block_slide1
+                .info-block__container
+                    .info-block__content
+                        .info-block__type Брокерское обслуживание
+                        .info-block__title Персональное брокерское обслуживание в банке
+                        .info-block__text Бесплатный ввод и вывод денежных средств (российские рубли в наличной и безналичной форме)
+                img(src="media/servicesSlider1.png").info-block__image
+                .info-block__footer
                     a(href="#!") Подать заявку
                     span.icon-go
-            .item-2.item-2_slide2
-                .servicesSlider__slide-container
-                    .servicesSlider__slide-content
-                        .servicesSlider__slide-type Еврооблигации
-                        .servicesSlider__slide-title Еврооблигации для всех. Продажа еврооблигаций
-                        .servicesSlider__slide-text Фиксированная доходность выше, чем по банковскому вкладу
-                    .servicesSlider__slide-image
+            .info-block.info-block_slide2
+                .info-block__container
+                    .info-block__content
+                        .info-block__type Еврооблигации
+                        .info-block__title Еврооблигации для всех. Продажа еврооблигаций
+                        .info-block__text Фиксированная доходность выше, чем по банковскому вкладу
+                    .info-block__image
                         img(src="media/servicesSlider2.png")
-                .servicesSlider__slide-footer
+                .info-block__footer
                     a(href="#!") Подать заявку
                     span.icon-go
 .customDots
