--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,3 +4,4 @@
 @import "../blocks/header/header";
 @import "../blocks/slider/slider";
 @import "../blocks/servicesSlider/servicesSlider"; 
+@import "../blocks/info-block/info-block"; 
